Task 3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-chart-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-chart-app
  template:
    metadata:
      labels:
        app: hello-chart-app
    spec:
      containers:
        - name: hello-chart
          image: vlukanin/otus-learning-tasks:0.7.0
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /user/version
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
              httpGet:
                port: 8080
                path: /user/health
              initialDelaySeconds: 10
              periodSeconds: 5
